@@ -38,13 +38,13 @@
 /* PROTOTYPES should be set to one if and only if the compiler supports
   function argument prototyping.
 
-  The following makes PROTOTYPES default to 0 if it has not already
+  The following makes PROTOTYPES default to 1 if it has not already
   been defined with C compiler flags.
 */
 
 
 #ifndef PROTOTYPES
-	#define PROTOTYPES 0
+	#define PROTOTYPES 1
 #endif
 
 /* POINTER defines a generic pointer type */
