@@ -211,6 +211,10 @@ Version 1.8.0
 Version 1.6.7
 *******************************************************************************
 
+2010-04-25 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	Define PROTOTYPES to be one by default in global.h. This affects the
+	RSA MD5 code.
+
 2010-03-27 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* Added API to ithread, created the following functions:
 	- int ithread_initialize_library(void);
